@@ -7197,6 +7197,8 @@ $v_p(f'(a))=v$.
 
 \fun{GEN}{ZpXQX_roots}{GEN F, GEN T, GEN p, long e}
 
+\fun{GEN}{ZpXQX_liftroots}{GEN F, GEN S, GEN T, GEN p, long e}
+
 \fun{GEN}{ZpXQX_divrem}{GEN x, GEN Sp, GEN T,GEN q,GEN p,long e, GEN *pr}
 as \kbd{FpXQX\_divrem}. The parameter $q$ must be equal to $p^e$.
 
